# ntwm-file-formats

./: README.md
plugins/blender/fxainport_addon/: __init__.py  fxa_nodes.py  fxa_parser.py  fxa_utils.py  pyproject.toml
plugins/blender/ntwm_models_plugin/: __init__.py  consts.py
plugins/blender/ntwm_models_plugin/handlers/: animation_handler.py  material_handler.py  texture_handler.py
plugins/blender/ntwm_models_plugin/operators/: __init__.py  export_operator.py  import_operator.py
plugins/blender/ntwm_models_plugin/panels/: panel_operator.py
plugins/blender/ntwm_models_plugin/parsers/: __init__.py  anb_parser.py  fxm_parser.py
plugins/blender/ntwm_models_plugin/preferences/: import_preferences.py
plugins/blender/ntwm_models_plugin/utils/: __init__.py  data_structures.py  helpers.py
plugins/noesis/: fmt_ntwm_anb.py  fmt_ntwm_fxm.py
plugins/noesis/blender/ntwm_models_plugin/: __init__.py
plugins/noesis/blender/ntwm_models_plugin/handlers/: __init__.py  animation_handler.py  material_handler.py  texture_handler.py
plugins/noesis/blender/ntwm_models_plugin/operators/: export_operator.py  import_operator.py
plugins/noesis/blender/ntwm_models_plugin/parsers/: anb_parser.py
plugins/noesis/blender/ntwm_models_plugin/utils/: data_structures.py
scripts/qbms/: run_csa.bat  unpack_csa.bms
templates/: ANB.bt  CSA.bt  FXA.bt  FXF.bt  FXM(keypose).bt  FXM.bt  MOT.bt
